Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Moustafa !!</title>
 </head>
 <body>
-<h1>Hello Moustafa !!!</h1>
+<h1>Hello Moustafa !!! It's a great course !!</h1>
 </body>
 </html>
